fixed it all